NIFI-14255: Removed any use of List.stream() from SimpleRecordSchema and instead used standard iterative practices. Added a lazily-initialized member variable for use in isRecursive